--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
-        <meta charset="utf-8">
-        <script defer src="/__/firebase/6.1.0/firebase-app.js"></script>
-        <!-- <script defer src="/__/firebase/6.1.0/firebase-auth.js"></script>
-        <script defer src="/__/firebase/6.1.0/firebase-database.js"></script>
-        <script defer src="/__/firebase/6.1.0/firebase-messaging.js"></script>
-        <script defer src="/__/firebase/6.1.0/firebase-storage.js"></script> -->
-        <script defer src="/__/firebase/init.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/style.css">
+    <meta charset="utf-8">
+    <script defer src="/__/firebase/6.1.0/firebase-app.js"></script>
+    <!-- <script defer src="/__/firebase/6.1.0/firebase-auth.js"></script>
+    <script defer src="/__/firebase/6.1.0/firebase-database.js"></script>
+    <script defer src="/__/firebase/6.1.0/firebase-messaging.js"></script>
+    <script defer src="/__/firebase/6.1.0/firebase-storage.js"></script> -->
+    <script defer src="/__/firebase/init.js"></script>
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -26,25 +26,34 @@
           <img src="/img/TITULO-PELICULA.png" alt="Logo Película - SUBVERSIÓN EN NICARAGUA, LA GUERRA PSICOLÓGICA">
         </header>
         <main>
-          <div class="modal">
-            <div class="button">
-              <img src="/img/PLAY.png" alt="Reproducir">
+          <!-- <div class="modal">
+            <div class="play">
+              <img src="/img/play.svg" onerror="this.onerror=null; this.src='/img/PLAY.png'" alt="reproducir">
             </div>
           </div>
           <div class="counter">
-            <div class="tittle">
+            <div class="title">
               <h2>Faltan</h2>
             </div>
             <div class="clock">
               <p>33:33:33:33</p>
             </div>
+          </div> -->
+          <div class="soon">
+            <h2>
+              DOCUMENTAL
+            </h2>
+            <P>PROXIMAMENTE</P>
           </div>
           <div class="text">
             <p>Suscríbete y recibe el estreno del documental Subversión en Nicaragua y cómo el pueblo venció la guerra no convencional que intentó imponer el imperio norteamericano a través del financiamiento a ong´s y medios de comunicación</p>
           </div>
-          <div class="form">
-            <input type="email" name="email" id="email" class="form-control" value="" required="required" title="" placeholder="Ingresa tu correo">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+          <div class="sus">
+            <div class="button">
+              <a href="">
+                <p>SUSCRIBIR</p>
+              </a>
+            </div>
           </div>
         </main>
         <footer>
