--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             <P>PROXIMAMENTE</P>
           </div>
           <div class="text">
-            <p>Suscríbete y recibe el estreno del documental Subversión en Nicaragua y cómo el pueblo venció la guerra no convencional que intentó imponer el imperio norteamericano a través del financiamiento a ong´s y medios de comunicación</p>
+            <p>Suscríbete para recibir una notificación y ser el primero en ver nuestro documental <b>Subversión en Nicaragua</b></p>
           </div>
           <div class="sus">
-            <div class="button">
-              <a href="">
+            <a href="">
+              <div class="button">
                 <p>SUSCRIBIR</p>
-              </a>
-            </div>
+              </div>
+            </a>
           </div>
         </main>
         <footer>
